<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".ui.SettingActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="11dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_weight="1"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/setting"
            android:textColor="@color/color_text_red"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSetting"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="9dp"
            app:srcCompat="@drawable/ic_setting" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvFileSave"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llHeader"
        app:strokeColor="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_bg">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_file_save" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="14dp"
                android:fontFamily="@font/urbanist_medium"
                android:text="@string/file_save_location"
                android:textColor="@color/color_text_black"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvBugReport"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="13dp"
        app:cardCornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvFileSave"
        app:strokeColor="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_bg">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_bug" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="14dp"
                android:fontFamily="@font/urbanist_medium"
                android:text="@string/bug_report_feedback"
                android:textColor="@color/color_text_black"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvCheckNewVersion"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="14dp"
        app:cardCornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvBugReport"
        app:strokeColor="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_bg">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_refresh" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="14dp"
                android:fontFamily="@font/urbanist_medium"
                android:text="@string/check_for_new_version"
                android:textColor="@color/color_text_black"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvPolicy"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="14dp"
        app:cardCornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvCheckNewVersion"
        app:strokeColor="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_bg">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_policy" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="14dp"
                android:fontFamily="@font/urbanist_medium"
                android:text="@string/policy"
                android:textColor="@color/color_text_black"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>